# externaldep

./: meson.build
foo/: Makefile  foo.c
src/: main.c
